Closed Bug 1785045 Opened 2 years ago Closed 2 years ago

Intermittent /webrtc/RTCDTMFSender-ontonechange-long.https.html | application crashed [@ mozilla::WebrtcAudioConduit::OnDtmfEvent]

Categories

(Core :: WebRTC, defect)

defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox112 --- wontfix
firefox113 --- wontfix
firefox114 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: bwc)

References

Details

(Keywords: crash, intermittent-failure)

Crash Data

Attachments

(1 file, 1 obsolete file)

Filed by: ctuns [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=387479768&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/AR2PUGaWRaKdDHdVz_6FuQ/runs/0/artifacts/public/logs/live_backing.log


[task 2022-08-16T10:04:19.915Z] 10:04:19     INFO - TEST-START | /webxr/dom-overlay/idlharness.https.window.html
[task 2022-08-16T10:04:19.924Z] 10:04:19     INFO - Closing window 6afc4587-d605-4333-ac76-45bd0464a5d4
[task 2022-08-16T10:04:19.999Z] 10:04:19     INFO - mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/29e34f43-4df3-fd7d-287d-1c5e7fba211c.dmp
[task 2022-08-16T10:04:20.000Z] 10:04:20     INFO - mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/29e34f43-4df3-fd7d-287d-1c5e7fba211c.extra
[task 2022-08-16T10:04:20.158Z] 10:04:20     INFO - PROCESS-CRASH | /webrtc/RTCDTMFSender-ontonechange-long.https.html | application crashed [@ mozilla::WebrtcAudioConduit::OnDtmfEvent(mozilla::DtmfEvent const&)]
[task 2022-08-16T10:04:20.158Z] 10:04:20     INFO - Crash dump filename: /tmp/tmpzc71nw5g/minidumps/29e34f43-4df3-fd7d-287d-1c5e7fba211c.dmp
[task 2022-08-16T10:04:20.158Z] 10:04:20     INFO - Operating system: Linux
[task 2022-08-16T10:04:20.158Z] 10:04:20     INFO -                   4.4.0-1014-aws #14taskcluster1-Ubuntu SMP Tue Apr 3 10:27:00 UTC 2018
[task 2022-08-16T10:04:20.158Z] 10:04:20     INFO - CPU: amd64
[task 2022-08-16T10:04:20.159Z] 10:04:20     INFO -      family 6 model 85 stepping 7
[task 2022-08-16T10:04:20.159Z] 10:04:20     INFO -      4 CPUs
[task 2022-08-16T10:04:20.159Z] 10:04:20     INFO - Linux Ubuntu 18.04 - bionic (Ubuntu 18.04.6 LTS)
[task 2022-08-16T10:04:20.159Z] 10:04:20     INFO - 
[task 2022-08-16T10:04:20.161Z] 10:04:20     INFO - Crash reason:  SIGSEGV / SEGV_MAPERR
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO - Crash address: 0x0
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO - Process uptime: not available
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO - 
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO - Thread 24 WebrtcC~read #1 (crashed)
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -  0  libxul.so!mozilla::WebrtcAudioConduit::OnDtmfEvent(mozilla::DtmfEvent const&) [AudioConduit.cpp:f7ffff73891a2b34df9f422c064851562661a8e7 : 169 + 0x0]
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -      rax = 0x00007f2f3b43a810    rdx = 0x0000000000001f40
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -      rcx = 0x000000000000000c    rbx = 0x00007f2f2e6c9520
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -      rsi = 0x00007f2f2e48de58    rdi = 0x0000000000000000
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -      rbp = 0x00007f2f2eb21620    rsp = 0x00007f2f2eb21620
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -       r8 = 0x0000000000001770     r9 = 0x0000000000000065
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -      r10 = 0x0012a55b7fb790c0    r11 = 0x00000000ffffffff
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -      r12 = 0x00007f2f2eb21720    r13 = 0x00007f2f2e69d280
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -      r14 = 0x00007f2f2e48de58    r15 = 0x00007f2f2fbfdcd0
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -      rip = 0x00007f2f3b43a828
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -     Found by: given as instruction pointer in context
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -  1  libxul.so!mozilla::detail::ListenerImpl<mozilla::AbstractThread, mozilla::MediaEventSourceImpl<(mozilla::ListenerPolicy)1, mozilla::DtmfEvent>::ConnectInternal<mozilla::AbstractThread, mozilla::WebrtcAudioConduit, void (mozilla::WebrtcAudioConduit::*)(mozilla::DtmfEvent const&)>(mozilla::AbstractThread*, mozilla::WebrtcAudioConduit*, void (mozilla::WebrtcAudioConduit::*)(mozilla::DtmfEvent const&))::{lambda(mozilla::DtmfEvent&&)#1}, mozilla::DtmfEvent>::ApplyWithArgs(mozilla::DtmfEvent&&) [MediaEventSource.h:f7ffff73891a2b34df9f422c064851562661a8e7 : 236 + 0x30]
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -      rbx = 0x00007f2f2e6c9520    rbp = 0x00007f2f2eb21660
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21630    r12 = 0x00007f2f2eb21720
[task 2022-08-16T10:04:20.162Z] 10:04:20     INFO -      r13 = 0x00007f2f2e69d280    r14 = 0x00007f2f2e48de58
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r15 = 0x00007f2f2fbfdcd0    rip = 0x00007f2f3b459048
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -  2  libxul.so!mozilla::detail::RunnableMethodImpl<mozilla::detail::Listener<mozilla::DtmfEvent>*, void (mozilla::detail::Listener<mozilla::DtmfEvent>::*)(mozilla::DtmfEvent&&), true, (mozilla::RunnableKind)0, mozilla::DtmfEvent&&>::Run() [nsThreadUtils.h:f7ffff73891a2b34df9f422c064851562661a8e7 : 1200 + 0x19]
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rbx = 0x00007f2f2eb21690    rbp = 0x00007f2f2eb21670
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21670    r12 = 0x00007f2f2eb21720
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r13 = 0x00007f2f2e69d280    r14 = 0x00007f2f2e47fe80
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r15 = 0x00007f2f2ffb05d0    rip = 0x00007f2f3b3ee1aa
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -  3  libxul.so!mozilla::detail::RunnableFunction<mozilla::TaskQueueWrapper<(mozilla::DeletionPolicy)1>::CreateTaskRunner(nsCOMPtr<nsIRunnable>)::{lambda()#1}>::Run() [nsThreadUtils.h:f7ffff73891a2b34df9f422c064851562661a8e7 : 531 + 0x33]
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rbx = 0x00007f2f2eb21690    rbp = 0x00007f2f2eb21710
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21680    r12 = 0x00007f2f2eb21720
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r13 = 0x00007f2f2e69d280    r14 = 0x00007f2f2e47fe80
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r15 = 0x00007f2f2ffb05d0    rip = 0x00007f2f3b3ddbec
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -  4  libxul.so!mozilla::AutoTaskDispatcher::TaskGroupRunnable::Run() [TaskDispatcher.h:f7ffff73891a2b34df9f422c064851562661a8e7 : 230 + 0x19]
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rbx = 0x0000000000000000    rbp = 0x00007f2f2eb217b0
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21720    r12 = 0x00007f2f2eb21720
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r13 = 0x00007f2f2e69d280    r14 = 0x00007f2f2e347a00
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r15 = 0x00007f2f2e639c10    rip = 0x00007f2f391c4d39
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -  5  libxul.so!mozilla::TaskQueue::Runner::Run() [TaskQueue.cpp:f7ffff73891a2b34df9f422c064851562661a8e7 : 259 + 0x8]
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rbx = 0x00007f2f2eb21800    rbp = 0x00007f2f2eb21890
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb217c0    r12 = 0x0000000000000000
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r13 = 0x00007f2f2e69d280    r14 = 0x00007f2f2e639c10
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r15 = 0x00007f2f2e347a00    rip = 0x00007f2f391c8f9d
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -  6  libxul.so!nsThreadPool::Run() [nsThreadPool.cpp:f7ffff73891a2b34df9f422c064851562661a8e7 : 310 + 0x8]
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rbx = 0x00007f2f2eb21910    rbp = 0x00007f2f2eb219a0
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb218a0    r12 = 0x00007f2f2fb41dc0
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r13 = 0x0000000000000000    r14 = 0x0000000000000000
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r15 = 0x00007f2f2e69d280    rip = 0x00007f2f391d8a91
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -  7  libxul.so!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:f7ffff73891a2b34df9f422c064851562661a8e7 : 1199 + 0xc]
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rbx = 0x00007f2f2eb21a50    rbp = 0x00007f2f2eb21ae0
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb219b0    r12 = 0x00000493fb966d78
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r13 = 0x0000000000000000    r14 = 0x00007f2f2e365580
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r15 = 0x00007f2f2eb21aff    rip = 0x00007f2f391d3817
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -  8  libxul.so!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:f7ffff73891a2b34df9f422c064851562661a8e7 : 465 + 0xf]
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rbx = 0x0000000000000000    rbp = 0x00007f2f2eb21b10
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21af0    r12 = 0x00007f2f2fbf6320
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r13 = 0x00007f2f2eb21bb8    r14 = 0x00007f2f2fbf6300
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r15 = 0x00007f2f2e365580    rip = 0x00007f2f391d731b
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -  9  libxul.so!mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [MessagePump.cpp:f7ffff73891a2b34df9f422c064851562661a8e7 : 300 + 0x9]
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rbx = 0x00007f2f2e365580    rbp = 0x00007f2f2eb21b50
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21b20    r12 = 0x00007f2f2fbf6320
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r13 = 0x00007f2f2eb21bb8    r14 = 0x00007f2f2fbf6300
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r15 = 0x00007f2f2e365580    rip = 0x00007f2f398659b8
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO - 10  libxul.so!MessageLoop::Run() [message_loop.cc:f7ffff73891a2b34df9f422c064851562661a8e7 : 356 + 0xb]
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rbx = 0x00007f2f2e365580    rbp = 0x00007f2f2eb21b80
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21b60    r12 = 0x00007f2f2ff23968
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r13 = 0x00007f2f2ff23960    r14 = 0x0000000000000013
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -      r15 = 0x00007f2f2eb21bb8    rip = 0x00007f2f39818456
[task 2022-08-16T10:04:20.163Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.164Z] 10:04:20     INFO - 11  libxul.so!nsThread::ThreadFunc(void*) [nsThread.cpp:f7ffff73891a2b34df9f422c064851562661a8e7 : 384 + 0x7]
[task 2022-08-16T10:04:20.164Z] 10:04:20     INFO -      rbx = 0x00007f2f2e365580    rbp = 0x00007f2f2eb21d90
[task 2022-08-16T10:04:20.164Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21b90    r12 = 0x00007f2f2ff23968
[task 2022-08-16T10:04:20.165Z] 10:04:20     INFO -      r13 = 0x00007f2f2ff23960    r14 = 0x0000000000000013
[task 2022-08-16T10:04:20.166Z] 10:04:20     INFO -      r15 = 0x00007f2f2eb21bb8    rip = 0x00007f2f391d0dfe
[task 2022-08-16T10:04:20.166Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.166Z] 10:04:20     INFO - 12  libnspr4.so!_pt_root [ptthread.c:f7ffff73891a2b34df9f422c064851562661a8e7 : 201 + 0x7]
[task 2022-08-16T10:04:20.166Z] 10:04:20     INFO -      rbx = 0x00007f2f2eb22700    rbp = 0x00007f2f2eb21de0
[task 2022-08-16T10:04:20.167Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21da0    r12 = 0x0000000000000000
[task 2022-08-16T10:04:20.173Z] 10:04:20     INFO -      r13 = 0x00007f2f2e45c5e0    r14 = 0x0000000000000002
[task 2022-08-16T10:04:20.174Z] 10:04:20     INFO -      r15 = 0x00007f2f48a23c40    rip = 0x00007f2f4a223819
[task 2022-08-16T10:04:20.174Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.174Z] 10:04:20     INFO - 13  firefox-bin!set_alt_signal_stack_and_start(PthreadCreateParams*) [pthread_create_interposer.cpp:f7ffff73891a2b34df9f422c064851562661a8e7 : 80 + 0x5]
[task 2022-08-16T10:04:20.174Z] 10:04:20     INFO -      rbx = 0x00007f2f30112000    rbp = 0x00007f2f2eb21eb0
[task 2022-08-16T10:04:20.174Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21df0    r12 = 0x00007f2f4a2235f0
[task 2022-08-16T10:04:20.175Z] 10:04:20     INFO -      r13 = 0x0000000000000000    r14 = 0x00007f2f2e45c5e0
[task 2022-08-16T10:04:20.175Z] 10:04:20     INFO -      r15 = 0x00007f2f2eb21e20    rip = 0x000056279395fae2
[task 2022-08-16T10:04:20.175Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.176Z] 10:04:20     INFO - 14  libpthread.so.0!start_thread [pthread_create.c : 463 + 0xc]
[task 2022-08-16T10:04:20.176Z] 10:04:20     INFO -      rbx = 0x0000000000000000    rbp = 0x0000000000000000
[task 2022-08-16T10:04:20.176Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21ec0    r12 = 0x00007f2f2eb21f80
[task 2022-08-16T10:04:20.177Z] 10:04:20     INFO -      r13 = 0x0000000000000000    r14 = 0x00007f2f2e6324f0
[task 2022-08-16T10:04:20.177Z] 10:04:20     INFO -      r15 = 0x00007ffee2375668    rip = 0x00007f2f49e396db
[task 2022-08-16T10:04:20.177Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.177Z] 10:04:20     INFO - 15  libc.so.6!__GI___clone + 0x3e
[task 2022-08-16T10:04:20.177Z] 10:04:20     INFO -      rbx = 0x00007f2f2eb22700    rbp = 0x0000000000000000
[task 2022-08-16T10:04:20.178Z] 10:04:20     INFO -      rsp = 0x00007f2f2eb21f80    r12 = 0x00007f2f2eb21f80
[task 2022-08-16T10:04:20.178Z] 10:04:20     INFO -      r13 = 0x0000000000000000    r14 = 0x00007f2f2e6324f0
[task 2022-08-16T10:04:20.178Z] 10:04:20     INFO -      r15 = 0x00007ffee2375668    rip = 0x00007f2f4901fa3f
[task 2022-08-16T10:04:20.178Z] 10:04:20     INFO -     Found by: call frame info
[task 2022-08-16T10:04:20.179Z] 10:04:20     INFO - 
[task 2022-08-16T10:04:20.179Z] 10:04:20     INFO - Thread 0 Web Content
Crash Signature: [@ mozilla::WebrtcAudioConduit::OnDtmfEvent(mozilla::DtmfEvent const&)] → [@ mozilla::WebrtcAudioConduit::OnDtmfEvent]
Summary: Intermittent /webrtc/RTCDTMFSender-ontonechange-long.https.html | application crashed [@ mozilla::WebrtcAudioConduit::OnDtmfEvent(mozilla::DtmfEvent const&)] → Intermittent /webrtc/RTCDTMFSender-ontonechange-long.https.html | application crashed [@ mozilla::WebrtcAudioConduit::OnDtmfEvent]

This just looks like a case where we've deleted the send stream, and not recreated it, while a DTMF event was already enqueued. We should just ignore the DTMF event in this case, I think.

Assignee: nobody → docfaraday
Attachment #9328162 - Attachment is obsolete: true
Pushed by bcampen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fa456fcb89a2 Set mTransmitting based on currentDirection, since that's in line with what other DOM code does here. r=pehrsons
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
See Also: → 1832628
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: