Bug 1785045: Set mTransmitting based on currentDirection, since that's in line with what other DOM code does here. r=pehrsons

Differential Revision: https://phabricator.services.mozilla.com/D175492